# Q-A-Tool_Emmanuel_Alafaa

./: README.md
smart_qa_project/: .gitignore  main.py  pyproject.toml
smart_qa_project/smart_qa/: client.py  custom_exceptions.py
smart_qa_project/tests/: test_client.py
